# PS_IA

./: .coverage  .dockerignore  .gitignore  Dockerfile  Projeto PS_IA_ API de Triagem de Candidatos e Geração de Perguntas com Machine Learning (2).md  README.md  README_Deploy.md  pyproject.toml  pytest.ini  requirements.txt  requiremets.txt
app/: logging_config.py  main.py  middlewares.py  routes.py  suggest.py
artifacts/: drift_report.csv  drift_summary.json
configs/: triagem_features.json
data/processed/: feature_map.json
docs/: guia_datasets_otimizados.md  mapeamento_chaves_merge.md
legacy/: 04_auto_features.py  transformers.py
legacy/models/: 05_train_baseline.py  05_train_random_forest.py  (+3 more)
models/: baseline_meta.json  baseline_pipeline.joblib
notebooks/: eda_recrutamento.ipynb
reports/: correlation_with_target.csv
scripts/: 01_inspeciona_json.ipynb  01_json_to_df.py  02_prepare_triagem.py  03_auto_features copy.py  03_auto_features.py  03_feature_engineering.py  04_auto_features.py  04_train_baseline.py  05_explain_model.py  05_train_baseline.py  05_train_random_forest.py  05_train_xgboost.py  06_check_leakage.py  06_evaluate_models.py  07_train_save_xgboost.py  build_call_rank_suggest.py  check_drift.py  inspect_json_keys.py  merge_recrutamento.py  payload_11225.txt
tests/: conftest.py  test_api.py  test_helpers.py  test_json_to_df.py  test_json_to_df_csv.py  test_json_to_df_extra.py  test_middlewares.py  test_routes.py  test_routes_edge_cases.py  test_routes_errors.py  test_routes_extra.py  test_suggest.py  test_train_pipeline.py
(+125 files in other folders)
