[project]
name = "triagem-candidatos"
version = "2.0.0"
description = "API de Match entre Candidatos para uma Vaga e Geração de Perguntas padronizadas para Entrevista"
authors = [
    {name = "FIAP Team", email = "team@fiap.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "joblib>=1.3.0",
    "mlflow>=2.8.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "structlog>=23.0.0",
    "python-json-logger>=2.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

# Configure hatchling to include src as a package
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
